ft_server/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: manifested-pod
  labels:
    app: yokse
spec:
  containers:
    - name: container
      image: server
      imagePullPolicy: Never 
      stdin: true
      tty: true
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: LoadBalancer
  ports:
      - port: 80
  selector: 
    app: manifested-pod
